# Alura-Python-Projects

./: README.md
Adivinhacao/: adivinhacao.py  main.py
Banco/: Conta.py  conta.py  main.py
Jogos/: adivinhacao.py  forca.py  interface.py  main.py
OOP/Banco/: conta.py
OOP/Jogos/: adivinhacao.py  interface.py  palavras.txt  parser.py
OOP/PlayList/: filme.py  main.py  programa.py
OOP/brasilidade/: Cpf_Cnpj.py  Datas.py  Telefones.py
OOP/bytebank/: main.py  report.xml
OOP/bytebank/src/: bytebank.py
OOP/bytebank/tests/: test_bytebank.py
OOP/extrator-url/: main.py
PlayList/: playlist.py  serie.py
brasilidade/: Cep.py  main.py  pyproject.toml
bytebank/: .coveragerc
data_science/data_science_extra/: contadores.py  faixas_de_valor.py  formas_de_selecoes.py  mais_sobre_graficos.py  organizando_dataframes.py  requirements.txt
data_science/data_science_pandas_2/: criando_agrupamentos.py  criando_estruturas_de_dados.py  identificando_e_removendo_outliers.py  tirando_valores_nulos.py
data_science/data_science_pandas_2/csv/: aluguel.residencial.csv  aluguel_residencial_sem_outliers.csv
data_science/grafico/: main.py
data_science/numpy_1/: main.py
data_science_extra/: concatenando_dataframes.py  importando_dados.py  tecnicas_interpolacao.py
data_science_pandas_1/: main.py
data_science_pandas_2/: criando_agrupamentos.py  criando_estruturas_de_dados.py  imoveis_residenciais.py  main.py  novas_variaveis.py  selecoes_e_frequencia.py  tirando_valores_nulos.py
extrator-url/: extrator_url.py  main.py
grafico/: main.py
numpy_1/: main.py
(+9 files in other folders)
