[tool.poetry]
name = "brasilidade"
version = "0.1.0"
description = ""
authors = ["Pedro Augusto de Portilho Ronzani <pedroaugustogabironzani@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cpf = "^2.1"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
